--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,8 +2,9 @@
 include ~/.config/kitty/colorshemes/inro.conf
 # Fonts
 # font_family       Hack Nerd Font 
-font_family      FiraCode Nerd Font SemBd
+# font_family      FiraCode Nerd Font SemBd
 # font_family      CascadiaCodePL-SemiBoldItalic 
+font_family      Hack Regular
 font_size        10
 
 adjust_line_height 0
@@ -29,7 +30,7 @@ open_url_with firefox
 copy_on_select yes
 
 # Shell
-#shell zsh
+shell zsh
 close_on_child_death no
 allow_remote_control yes
 term xterm-256color
@@ -47,7 +48,7 @@ window_border_width 1.5
 window_margin_width 5
 window_padding_width 5
 inactive_text_alpha 1.0
-background_opacity 0.7
+background_opacity 1.0
 draw_minimal_borders yes
 
 # Performance
@@ -74,6 +75,7 @@ tab_bar_style powerline
 # tab_bar_style separator
 # inactive_tab_background #e06c75
 # active_tab_background #98c379
+#
 inactive_tab_background #255882
 active_tab_background #2389dd
 inactive_tab_foreground #000000
